--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -16,6 +16,10 @@
     background-size: cover;
     background-position: center;
 
+    .site-title {
+        font-size: 24px;
+    }
+
     .nav-link {
         background: var(--sidebar-nav-bg);
     }
@@ -31,7 +35,8 @@ div#main-wrapper > div.container {
     background-size: 200px 200px;
 
     main div.content {
-    
+        word-spacing: 1.5px;
+
         h1, h2, h3 {
             font-weight: bold;
         }
