update css - main content custom bg - --text-color, --text-muted-color, --prompt-info-bg - sidebar text color

--- a/_sass/colors/syntax-light.scss
+++ b/_sass/colors/syntax-light.scss
@@ -21,6 +21,7 @@
   
     // CUSTOM
     --bootstrap-button-bg: #fefefe;
+    --main-inner-bg: #fff3;
 
     /* --- Syntax highlight theme from `rougify style github` --- */
   
