--- a/_sass/colors/typography-light.scss
+++ b/_sass/colors/typography-light.scss
@@ -12,11 +12,11 @@
     --main-border-color: #f3f3f3;
   
     /* Common color */
-    --text-color: #34343c;
-    --text-muted-color: #757575;
+    --text-color: #131314;
+    --text-muted-color: #535353;
     --text-muted-hightlight-color: inherit;
-    --heading-color: #2a2a2a;
-    --label-color: #585858;
+    --heading-color: #0b0b0b;
+    --label-color: #2f2f2f;
     --blockquote-border-color: #eeeeee;
     --blockquote-text-color: #757575;
     --link-color: #0056b2;
@@ -84,7 +84,7 @@
     --prompt-text-color: rgb(46, 46, 46, 0.77);
     --prompt-tip-bg: rgb(123, 247, 144, 0.2);
     --prompt-tip-icon-color: #03b303;
-    --prompt-info-bg: #e1f5fe;
+    --prompt-info-bg: #c1e7f8;
     --prompt-info-icon-color: #0070cb;
     --prompt-warning-bg: rgb(255, 243, 205);
     --prompt-warning-icon-color: #ef9c03;
