update css - --bootstrap-button-bg, --card-bg, --card-hovor-bg, --main-inner-bg

--- a/_sass/colors/syntax-light.scss
+++ b/_sass/colors/syntax-light.scss
@@ -20,7 +20,7 @@
     }
   
     // CUSTOM
-    --bootstrap-button-bg: #fefefe;
+    --bootstrap-button-bg: #f7faff;
     --main-inner-bg: #fff3;
 
     /* --- Syntax highlight theme from `rougify style github` --- */
