--- a/_sass/colors/typography-light.scss
+++ b/_sass/colors/typography-light.scss
@@ -70,8 +70,8 @@
     --toc-highlight: #0550ae;
     --btn-share-color: gray;
     --btn-share-hover-color: #0d6efd;
-    --card-bg: white;
-    --card-hovor-bg: #e2e2e2;
+    --card-bg: #f7faff;
+    --card-hovor-bg: #d3e1ff;
     --card-shadow: rgb(104, 104, 104, 0.05) 0 2px 6px 0,
       rgba(211, 209, 209, 0.15) 0 0 0 1px;
     --footnote-target-bg: lightcyan;
