update css - update font - update sidebar css

--- a/_sass/colors/syntax-light.scss
+++ b/_sass/colors/syntax-light.scss
@@ -21,7 +21,8 @@
   
     // CUSTOM
     --bootstrap-button-bg: #f7faff;
-    --main-inner-bg: #fff3;
+    --main-inner-bg: #fff5;
+    --archive-even-bg: linear-gradient(to left, #78a7d222, #116dc422, #116dc422, #116dc422, #78a7d222);
 
     /* --- Syntax highlight theme from `rougify style github` --- */
   
