--- a/_sass/variables-hook.scss
+++ b/_sass/variables-hook.scss
@@ -1,1 +1,2 @@
-$font-family-base: 'Noto Sans Demilight', 'Noto Sans KR';
+$font-family-base: 'NanumSquareNeo', 'Noto Sans Demilight', 'Noto Sans KR';
+$font-family-heading: 'NanumSquareNeo', Lato, 'Microsoft Yahei', sans-serif;
