update css - update bg, align

--- a/_sass/colors/typography-dark.scss
+++ b/_sass/colors/typography-dark.scss
@@ -105,6 +105,7 @@
     --timeline-year-dot-color: var(--timeline-color);
 
     /* Custom */
+    --header-hr-border-color: #666;
     --content-hr-border-color: #555;
     --content-hr-image-bg-color: #8dabd5;
     --content-highlight-scrollbar-color: #1a1c25;
