--- a/_sass/colors/typography-light.scss
+++ b/_sass/colors/typography-light.scss
@@ -6,10 +6,10 @@
 
  @mixin light-scheme {
     /* Framework color */
-    // <a href="https://www.freepik.com/free-photo/white-cloud-blue-sky_3707296.htm#query=cloudy%20background&position=0&from_view=search&track=ais&uuid=e3dc69ee-5dc4-4465-a994-251b5490f880">Image by lifeforstock</a> on Freepik
-    --main-bg: url("/assets/img/background/light_container.jpg");
+    // <a href="https://www.freepik.com/free-photo/vivid-blurred-colorful-wallpaper-background_17729660.htm#query=blue%20background&position=2&from_view=search&track=ais&uuid=4c51aa03-d699-4304-a83c-c12816d881c6">Image by user3802032</a> on Freepik
+    --main-bg: url("/assets/img/background/light_container2.jpg");
     --mask-bg: #c1c3c5;
-    --main-border-color: #f3f3f3;
+    --main-border-color: rgb(245, 250, 255);
   
     /* Common color */
     --text-color: #131314;
@@ -116,6 +116,7 @@
     --timeline-year-dot-color: #ffffff;
 
     /* Custom */
+    --header-hr-border-color: #ccc;
     --content-hr-border-color: #bbb;
     --content-hr-image-bg-color: #ff9898;
     --content-highlight-scrollbar-color: #eceeef;
