update css -update bg

--- a/_sass/colors/typography-dark.scss
+++ b/_sass/colors/typography-dark.scss
@@ -5,7 +5,7 @@
 
  @mixin dark-scheme {
     /* Framework color */
-    // Image by <a href="https://www.freepik.com/free-vector/night-starry-sky-background_3799982.htm#query=stars%20in%20the%20sky&position=1&from_view=search&track=ais&uuid=d4d23d71-8517-4ee3-8d73-d75f9cbd1faa">Freepik</a>
+    // Image by <a href="https://www.freepik.com/free-photo/drops-paint-water_2254494.htm#page=6&query=skyblue%20black%20background&position=49&from_view=search&track=ais&uuid=aaeff77b-1a62-4b25-98cd-a055e7b885da">Freepik</a>
     --main-bg: url("/assets/img/background/dark_container.jpg");
     --mask-bg: rgb(68, 69, 70);
     --main-border-color: rgb(44, 45, 45);
