update post, css - update bg, button bg - update new post

--- a/_sass/colors/syntax-dark.scss
+++ b/_sass/colors/syntax-dark.scss
@@ -16,8 +16,8 @@
     --filepath-text-color: #cacaca;
 
     // CUSTOM
-    --bootstrap-button-bg: #fff1;
-    --main-inner-bg: #2229;
+    --bootstrap-button-bg: #0005;
+    --main-inner-bg: #16161699;
   
     .highlight .gp {
       color: #87939d;
