--- a/_sass/colors/syntax-light.scss
+++ b/_sass/colors/syntax-light.scss
@@ -21,7 +21,7 @@
   
     // CUSTOM
     --bootstrap-button-bg: #f7faff;
-    --main-inner-bg: #fff7;
+    --main-inner-bg: #f3f3f388;
     --archive-even-bg: linear-gradient(to left, #e8eeee99, #d0e8ff99, #d0e8ff99, #d0e8ff99, #e8eeee99);
 
     /* --- Syntax highlight theme from `rougify style github` --- */
