--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -126,10 +126,12 @@ html {
                 div.content {
                     word-spacing: 1.5px;
 
-                    h1,
-                    h2,
-                    h3 {
-                        font-weight: bold;
+                    h1 {
+                        font-weight: 700;
+                    }
+
+                    h2, h3, h4 {
+                        font-weight: 800;
                     }
 
                     h2 {
