update post, css - update npm post - update prompt bg, color

--- a/_sass/colors/typography-light.scss
+++ b/_sass/colors/typography-light.scss
@@ -83,10 +83,10 @@
     --kbd-wrap-color: #bdbdbd;
     --kbd-text-color: var(--text-color);
     --kbd-bg-color: white;
-    --prompt-text-color: rgb(46, 46, 46, 0.77);
-    --prompt-tip-bg: rgb(123, 247, 144, 0.2);
+    --prompt-text-color: rgba(29, 29, 29, 0.952);
+    --prompt-tip-bg: rgba(123, 247, 144, 0.336);
     --prompt-tip-icon-color: #03b303;
-    --prompt-info-bg: #b4e7ff;
+    --prompt-info-bg: rgba(0, 119, 255, 0.164);
     --prompt-info-icon-color: #0070cb;
     --prompt-warning-bg: rgb(255, 243, 205);
     --prompt-warning-icon-color: #ef9c03;
