update posts - update npm, git posts

--- a/_sass/colors/syntax-light.scss
+++ b/_sass/colors/syntax-light.scss
@@ -37,7 +37,7 @@
     .highlight,
     .highlight .w {
       color: #24292f;
-      background-color: #f6f8fa;
+      background-color: #fafcfe;
     }
   
     .highlight .k,
