--- a/_sass/colors/typography-light.scss
+++ b/_sass/colors/typography-light.scss
@@ -88,9 +88,9 @@
     --prompt-tip-icon-color: #03b303;
     --prompt-info-bg: rgba(0, 119, 255, 0.164);
     --prompt-info-icon-color: #0070cb;
-    --prompt-warning-bg: rgb(255, 243, 205);
+    --prompt-warning-bg: rgb(255, 238, 184);
     --prompt-warning-icon-color: #ef9c03;
-    --prompt-danger-bg: rgb(248, 215, 218, 0.56);
+    --prompt-danger-bg: rgba(255, 180, 186, 0.793);
     --prompt-danger-icon-color: #df3c30;
   
     /* Tags */
