update post - update link - new post. cookie - samesite

--- a/_sass/colors/syntax-dark.scss
+++ b/_sass/colors/syntax-dark.scss
@@ -17,7 +17,7 @@
 
     // CUSTOM
     --bootstrap-button-bg: #0005;
-    --main-inner-bg: #080808dd;
+    --main-inner-bg: #040410;
   
     .highlight .gp {
       color: #87939d;
