--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -125,6 +125,8 @@ html {
 
                 div.content {
                     word-spacing: 1.5px;
+                    font-size: 14px;
+                    line-height: 1.5;
 
                     h1 {
                         font-weight: 700;
