--- a/_sass/colors/typography-dark.scss
+++ b/_sass/colors/typography-dark.scss
@@ -15,7 +15,7 @@
     --text-color: rgb(175, 176, 177);
     --text-muted-color: #868686;
     --text-muted-hightlight-color: #aeaeae;
-    --heading-color: #cccccc;
+    --heading-color: #5d97bb;
     --label-color: #a7a7a7;
     --blockquote-border-color: rgb(66, 66, 66);
     --blockquote-text-color: #868686;
